--- a/readme.me
+++ b/readme.me
@@ -7,22 +7,22 @@ Welcome to the **BiasEvaluation** repository! This project contains a suite of a
 
 ### 1. Running LLMs
 Load scenarios from JSON, generate variations, run five questions through multiple LLMs, and collect answers.  
-[See detailed instructions →](Codes_LLM_Runs&Analyses/Running_LLMs/readme.me)
+[See detailed instructions →](Running_LLMs/readme.me)
 
 ---
 
 ### 2. Scenario Statistics
 Compute descriptive statistics (tokens, readability, sentiment, similarity) across all scenarios and visualize distributions.  
-[See detailed instructions →](Codes_LLM_Runs&Analyses/Scenarios/readme.me)
+[See detailed instructions →](Scenarios/readme.me)
 
 ---
 
 ### 3. Counterfactual Analysis
 Perform counterfactual comparisons on model outputs: semantic similarity and sentiment shifts between scenario variations for each LLM, plus cross-model summaries.  
-[See detailed instructions →](Codes_LLM_Runs&Analyses/Counterfactual%20Analysis/readme.me)
+[See detailed instructions →](Counterfactual%20Analysis/readme.me)
 
 ---
 
 ### 4. Adjective Analysis
 Extract and quantify adjectives used by each model for each character and variation; analyze frequency, sentiment bias, and lexical richness.  
-[See detailed instructions →](Codes_LLM_Runs&Analyses/Adjective%20Analysis/readme.me)
+[See detailed instructions →](Adjective%20Analysis/readme.me)
